# stratum

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Dockerfile.refresh  FABLE5-DATASET-AUDIT.md  HANDBOOK.md  README.md  STRATUM-PORT-TODO.md  pyproject.toml
docs/: packing-plan.md  reference-map.md  roundpipe-backports.md
patches/: flash-attn-2.8.3-qk-max-logits.patch  flash-attn-v100-6d53118-qk-max-logits.patch
scripts/: debug_device.py  doctor.py  fable5_dataset.py  run-unified.sh  smoke_port.py  smoke_test.py  tensorboard.sh  test_nf4_devices.py  train.py
stratum/: __init__.py  _profile.py  _threads.py  assign.py  attribute.py  batch.py  checkpoint.py  context.py  grad_hooks.py  grad_scaler.py  host_staging.py  layer_transfer.py  memory.py  moe.py  muon.py  nf4_linear.py  optim.py  optim_stream.py  output.py  packing.py  pipeline.py  planner.py  qk_clip.py  runtime.py  scheduler.py  stage.py  telemetry.py  timing.py  transfer.py  upload.py  utils.py  watchdog.py
stratum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stratum/data/: __init__.py  fable5.py
stratum/model/: blocked_loss.py  chunked_loss.py  lfm25.py  llama.py  mlp_opt.py  qwen3.py  qwen35.py  qwen3_moe.py  registry.py
tests/: test_adapters.py  test_assign.py  test_batch.py  test_batch_pytree.py  test_blocked_loss.py  test_bwd_prefetch.py  test_checkpoint.py  test_chunked_loss.py  test_context.py  test_fable5_data.py  test_host_staging.py  test_layer_transfer.py  test_memory.py  test_mlp_opt.py  test_moe.py  test_optim.py  test_package_exports.py  test_packing.py  test_pipeline_prefetch.py  test_planner.py  test_postfix_aux_loss.py  test_registry_staged_load.py  test_runtime.py  test_scheduler.py  test_timing.py  test_transfer.py  test_upload.py
