[project]
name = "stratum"
version = "0.1.0"
description = "Multi-GPU layer-parallel training for transformer models"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

authors = [
    { name = "Harri (h4rm0n1c)" },
    { name = "Stratum contributors" },
]

# Stratum builds on the work of many open-source projects.
# See README.md (Acknowledgments) and CITATION.cff for the full list.

dependencies = [
    "torch>=2.11",
    "bitsandbytes",
    "transformers",
    "peft",
    "safetensors",
    "tqdm",
    "py-cpuinfo",
    "ninja",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]

[project.urls]
homepage = "https://github.com/h4rm0n1c/stratum"
documentation = "https://github.com/h4rm0n1c/stratum/blob/main/HANDBOOK.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stratum*"]
